--- a/src/my_robot_launch/config/my_controllers.yaml
+++ b/src/my_robot_launch/config/my_controllers.yaml
@@ -26,6 +26,13 @@ diff_cont:
     wheel_radius: 0.035
 
     use_stamped_vel: false
+    
+    # Enable odometry publishing
+    enable_odom_tf: true
+    odom_frame_id: odom
+    
+    # Remap cmd_vel topic (this will be handled in launch file)
+    cmd_vel_timeout: 0.5
 
 joint_broad:
   ros__parameters:
@@ -77,3 +84,9 @@ joint_broad:
 
 # joint_broad:
 #   ros__parameters:
+# Add topic remapping for cmd_vel
+diff_cont:
+  ros__parameters:
+    # ... existing parameters ...
+    # Remap cmd_vel to the standard topic
+    cmd_vel_topic: /cmd_vel
